discussion/kv_engine/176433/176433_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan config duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-31 08:58:04.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 10:04:20.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19850/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19850/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19850/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48783/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite.cc(7068): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9545/ : FAILURE

Compile error at [2022-08-31T09:57:57.987Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9545/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21093/ : FAILURE

Compile error at [2022-08-31T10:01:20.004Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21093/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30183/ : FAILURE

Compile error at [2022-08-31T10:03:54.069Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30183/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22154/ : FAILURE

Compile error at [2022-08-31T10:01:02.984Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22154/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9644/ : FAILURE

Compile error at [2022-08-31T09:31:16.992Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9644/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21802/ : FAILURE

Compile error at [2022-08-31T09:57:48.201Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21802/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22891/ : FAILURE

Compile error at [2022-08-31T09:58:22.170Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7068:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22891/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19071/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41010/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
